# QuizBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: seed_surveys.py
src/bot/: .env.example  keyboards.py  main.py  states.py
src/bot/handlers/: survey_flow.py
src/core/: engine.py  loader.py  models.py  repository.py
src/core/db/: database.py  orm_models.py
surveys/: trevoga_test.json
tests/: test_engine.py
