[project]
name = "quizbot"
version = "0.1.0"
description = "Telegram-бот для прохождения опросов"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0"
]
